# st_handeye_graph

./: .gitignore  CMakeLists.txt  README.md
calibration_data/20231004/: 000.csv  001.csv  001_joints.txt  002_joints.txt  003_joints.txt  005.csv  005_joints.txt  006_joints.txt  007_joints.txt  009_joints.txt  010.csv  010_joints.txt  011_joints.txt  012_joints.txt
calibration_data/20231005/: 000_joints.txt  002.csv  003.csv  004.csv  004_joints.txt  006.csv  007.csv  008.csv  008_joints.txt  009.csv  011.csv  012.csv
calibration_data/20231006/: 001.csv  001_joints.txt  006.csv  006_joints.txt  008.csv  008_joints.txt  010.csv  010_joints.txt
scripts/: run_calibration.sh  run_calibration_charuco.sh
src/: calibrate.cpp  calibrate_charuco.cpp
